# basicOCR

./: LICENSE  README  build.sh
OCR/: AData.hpp  CMakeLists.txt  FeatureExtractor.cpp  FeatureExtractor.hpp  Gui.cpp  Gui.hpp  IClassifier.hpp  IPreprocessor.hpp  Ocr.cpp  Ocr.hpp  Options.cpp  Options.hpp  main.cpp  test_set  training_set
OCR/ANN/: ClassifierANN.cpp  ClassifierANN.hpp  PreprocessorANN.cpp  PreprocessorANN.hpp
OCR/DataDIY/: DataDIY.cpp  DataDIY.hpp
OCR/DataUCI/: DataUCI.cpp  DataUCI.hpp
OCR/KNN/: ClassifierKNN.cpp  ClassifierKNN.hpp  PreprocessorKNN.cpp  PreprocessorKNN.hpp
